# softwaretesting

./: .gitignore  CMakeLists.txt
demo-code/: CMakeLists.txt
demo-code/src/: democlass.cpp  democlass.h
doc/: datasheet.tex  student presentation.odp  student_presentation.odp  workflow.xml
unit-tests/: CMakeLists.txt  DemoClassTest.cpp  DemoClassTest.h  Main.cpp
